--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,6 +25,10 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <div class="errormessages">
+            <ul class="errorlist">
+              
+            </ul>
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
